* …

=== Bug fixes in 1.38 ===
* …

=== Action API changes in 1.38 ===
* …

=== Action API internal changes in 1.38 ===
* …

=== Languages updated in 1.38 ===
MediaWiki supports over 350 languages. Many localisations are updated regularly.
Below only new and removed languages are listed, as well as changes to languages
because of Phabricator reports.

* …

=== Breaking changes in 1.38 ===
* LinkCache::singleton(), deprecated since 1.28, has been removed.
* RepoGroup::singleton(), ::destroySingletons() and setSingleton(), all
  deprecated since 1.34, have been removed.
* MessageCache::singleton(), deprecated since 1.34, has been removed.
* LockManagerGroup::singleton() and ::destroySingletons(), both deprecated since
  1.34, have been removed.
* FileBackendGroup::singleton() and ::destroySingletons(), both deprecated since
  1.35, have been removed.
* TemplateParser used to support disabling the cache with a boolean parameter
  in its constructor. This was deprecated in 1.35 and has now been removed.
* The ArticleUndeleteLogEntry hook, deprecated in 1.37, was removed.
* The BeforeResetNotificationTimestamp hook, deprecated in 1.37, was removed.
* The global function mimeTypeMatch() has been removed without a deprecation
  process.
* The signature of PageUpdater::markAsRevert method was changed. It has never
  been used outside of MediaWiki core.
* If you want to use interwiki titles with HTMLTitleTextField, you now need
  to pass 'interwiki' => true. In 1.37, the default behavior was to let
  interwiki title through by default, logging a deprecation warning.
* Several Skin methods, hard deprecated in 1.36, have been removed. These
  include Skin::privacyLink(), aboutLink(), disclaimerLink(), makeUrl()
  getIndicatorsHTML(), getLogo(), subPageSubtitle(), getSearchLink(),
  makeVariablesScript(), getAllowedSkins(), getSkinNames() and
  mainPageLink(). Use Skin::footerLink for footer links instead of
  privacyLink, aboutLink and disclaimerLink. For others use