@@ -21,6 +21,7 @@
 use MediaWiki\MediaWikiServices;
 use MediaWiki\Page\PageReference;
 use Wikimedia\Assert\Assert;
+use Wikimedia\IPUtils;
 
 /**
  * Handles purging the appropriate CDN objects given a list of URLs or Title instances
@@ -300,7 +301,7 @@ class CdnCacheUpdate implements DeferrableUpdate, MergeableUpdate {
 			$url = self::expand( $url );
 			$urlInfo = wfParseUrl( $url );
 			$urlHost = strlen( $urlInfo['port'] ?? null )
-				? IP::combineHostAndPort( $urlInfo['host'], $urlInfo['port'] )
+				? IPUtils::combineHostAndPort( $urlInfo['host'], $urlInfo['port'] )
 				: $urlInfo['host'];
 			$baseReq = [
 				'method' => 'PURGE',
