@@ -89,6 +89,10 @@ because of Phabricator reports.
 * …
 
 === Breaking changes in 1.38 ===
+* (T291008) The IP class, deprecated since 1.35 in favor of the IPUtils library,
+  has been removed. The IP related regexes which were also deprecated in favor
+  of the IPUtils library were also removed, IPUtils::RE_* should be used
+  instead.
 * LinkCache::singleton(), deprecated since 1.28, has been removed.
 * RepoGroup::singleton(), ::destroySingletons() and setSingleton(), all
   deprecated since 1.34, have been removed.
